// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShareDashboardDialogFilter > renders correctly when hasMultipleFactories is false 1`] = `
<div
  class="d-flex flex-wrap px-3 py-1"
>
  <evocon-input-chip-stub
    class="ma-1"
    disabled="false"
    error="false"
    grow="false"
    isdynamicchip="true"
    isplaininputchip="false"
    modelvalue=""
    placeholder="Name"
    prependinnericon="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
    warning="false"
  />
  <!--v-if-->
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups="[object Object],[object Object]"
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="true"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items=""
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="false"
    placeholder=""
    prepend-inner-icon="M21,16H3V4H21M21,2H3C1.89,2 1,2.89 1,4V16A2,2 0 0,0 3,18H10V20H8V22H16V20H14V18H21A2,2 0 0,0 23,16V4C23,2.89 22.1,2 21,2Z"
    prependtext="Stations:"
    removenonexistentselections="true"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items=""
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="false"
    placeholder=""
    prepend-inner-icon="M18,19H6V17.6C6,15.6 10,14.5 12,14.5C14,14.5 18,15.6 18,17.6M12,7A3,3 0 0,1 15,10A3,3 0 0,1 12,13A3,3 0 0,1 9,10A3,3 0 0,1 12,7M12,3A1,1 0 0,1 13,4A1,1 0 0,1 12,5A1,1 0 0,1 11,4A1,1 0 0,1 12,3M19,3H14.82C14.4,1.84 13.3,1 12,1C10.7,1 9.6,1.84 9.18,3H5A2,2 0 0,0 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3Z"
    prependtext="Roles:"
    removenonexistentselections="false"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
</div>
`;

exports[`ShareDashboardDialogFilter > renders correctly when hasMultipleFactories is true 1`] = `
<div
  class="d-flex flex-wrap px-3 py-1"
>
  <evocon-input-chip-stub
    class="ma-1"
    disabled="false"
    error="false"
    grow="false"
    isdynamicchip="true"
    isplaininputchip="false"
    modelvalue=""
    placeholder="Name"
    prependinnericon="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
    warning="false"
  />
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="false"
    placeholder=""
    prepend-inner-icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
    prependtext="Factories:"
    removenonexistentselections="true"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups="[object Object],[object Object]"
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="true"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items=""
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="false"
    placeholder=""
    prepend-inner-icon="M21,16H3V4H21M21,2H3C1.89,2 1,2.89 1,4V16A2,2 0 0,0 3,18H10V20H8V22H16V20H14V18H21A2,2 0 0,0 23,16V4C23,2.89 22.1,2 21,2Z"
    prependtext="Stations:"
    removenonexistentselections="true"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items=""
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="false"
    placeholder=""
    prepend-inner-icon="M18,19H6V17.6C6,15.6 10,14.5 12,14.5C14,14.5 18,15.6 18,17.6M12,7A3,3 0 0,1 15,10A3,3 0 0,1 12,13A3,3 0 0,1 9,10A3,3 0 0,1 12,7M12,3A1,1 0 0,1 13,4A1,1 0 0,1 12,5A1,1 0 0,1 11,4A1,1 0 0,1 12,3M19,3H14.82C14.4,1.84 13.3,1 12,1C10.7,1 9.6,1.84 9.18,3H5A2,2 0 0,0 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3Z"
    prependtext="Roles:"
    removenonexistentselections="false"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
</div>
`;

exports[`ShareDashboardDialogFilter > renders correctly when search filter is not empty 1`] = `
<div
  class="d-flex flex-wrap px-3 py-1"
>
  <evocon-input-chip-stub
    appendinnericon="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"
    class="ma-1"
    disabled="false"
    error="false"
    grow="false"
    isdynamicchip="true"
    isplaininputchip="false"
    modelvalue="search"
    placeholder="Name"
    prependinnericon="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
    warning="false"
  />
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="false"
    placeholder=""
    prepend-inner-icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
    prependtext="Factories:"
    removenonexistentselections="true"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups="[object Object],[object Object]"
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="true"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items=""
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="false"
    placeholder=""
    prepend-inner-icon="M21,16H3V4H21M21,2H3C1.89,2 1,2.89 1,4V16A2,2 0 0,0 3,18H10V20H8V22H16V20H14V18H21A2,2 0 0,0 23,16V4C23,2.89 22.1,2 21,2Z"
    prependtext="Stations:"
    removenonexistentselections="true"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items=""
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="false"
    placeholder=""
    prepend-inner-icon="M18,19H6V17.6C6,15.6 10,14.5 12,14.5C14,14.5 18,15.6 18,17.6M12,7A3,3 0 0,1 15,10A3,3 0 0,1 12,13A3,3 0 0,1 9,10A3,3 0 0,1 12,7M12,3A1,1 0 0,1 13,4A1,1 0 0,1 12,5A1,1 0 0,1 11,4A1,1 0 0,1 12,3M19,3H14.82C14.4,1.84 13.3,1 12,1C10.7,1 9.6,1.84 9.18,3H5A2,2 0 0,0 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3Z"
    prependtext="Roles:"
    removenonexistentselections="false"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
</div>
`;
